--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"个人博客(建设中......)",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "subTitle":"建设中……",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/126930853?u=9ac80a8778a25a9035582eca57b76d3e13957099&v=4",
     "GMEEK_VERSION":"last"
 }
