--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Ayazuki的博客(建设中......)",
+    "title":"Ayazuki的博客",
     "subTitle":"正在建设中……",
     "avatarUrl":"https://avatars.githubusercontent.com/u/126930853?u=9ac80a8778a25a9035582eca57b76d3e13957099&v=4",
     "GMEEK_VERSION":"last"
